<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              tools:context="com.s15752.MainActivity">

    <Button
            android:id="@+id/buttonBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/BMI_calculator"
    />
    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/Game"
        />
    <Button
        android:id="@+id/buttonCovid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/Quiz"
        />
</LinearLayout>
