<resources>
    <string name="BMI_calculator">Calculator BMI</string>
    <string name="app_name">Android app</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculateBMI">Calculate</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>

    <string name="wyglodzenie">very severely underweight</string>
    <string name="wychudzenie">severely underweight</string>
    <string name="niedowaga">underweight</string>
    <string name="wartosc_prawidlowa">normal</string>
    <string name="nadwaga">overweight</string>
    <string name="I_stopien_otylosci">obese class I</string>
    <string name="II_stopien_otylosci">obese class II</string>
    <string name="otyłosc_skrajna">obese class III</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string name="Age">Age</string>

    <!-- game -->
    <string name="Quiz">Game</string>
    <string name="Score">Score</string>
    <string name="quit">Quit</string>
    <string name="start_infected_chart">Infected People</string>
    <string name="start_cure_chart">" Healed People"</string>
    <string name="start_death_chart">Number of Deaths</string>
    <string name="app_name_main">PAMO app</string>


    <!-- quiz -->
   <string name="results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
   <string name="reset_game">Reset Game</string>
   <string name="win">You win!</string>
   <string name="lose">You lose!</string>
   <string name="time_remaining_format">Time remaining: %.1f seconds</string>
    <string name="Game">Quiz</string>

<!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
